# user-gallery

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
backend/: manage.py
backend/gallery/: helpers.py  mixins.py  serializers.py  urls.py  views.py
backend/user_gallery/: asgi.py  error_handlers.py  settings.py  swagger.py  urls.py  wsgi.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_gallery_link.py  0003_remove_user_gallery_link.py
tests/: conftest.py
tests/fixtures/: gallery_fixture.py  global_vars.py  helpers.py  register_user_fixture.py
tests/tests_gallery/: test_gallery_views.py  test_helpers.py
tests/tests_register_user/: test_register_user.py
